# comms-ccf

./: .clangd  .editorconfig  .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxygen  LICENSE  README.md  flake.nix  rewrite.md
.github/workflows/: FreeRTOS-Demo.yaml  FreeRTOS-Demo.yml  test.yaml
FreeRTOS-Demo/: .gitattributes  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig.h  README.md  ccf-config.cpp  ccf-config.hpp  ccf-uart0.cpp  ccf-uart0.h  comms-ccf.cpp  comms-ccf.hpp  gcc-arm-embedded.cmake  log-task.cpp  log-task.h  log.cpp  log.hpp  main.c  makefile  mutex.hpp  rpc-task.cpp  rpc-task.h  standalone.ld  startup.c
FreeRTOS-Demo/compare/: data.json  update_table.py
FreeRTOS-Demo/misc/: compare.md  measure_features.py  update_table.py
comms-ccf/: cbor.cpp  cbor.hpp  ccf.hpp  circular_buffer.hpp  cobs.cpp  cobs.hpp  comptime_str.hpp  debug_end.hpp  fnv1a.hpp  itertools.cpp  itertools.hpp  ndebug.hpp  packetizer.cpp  packetizer.hpp  rpc.hpp  types.hpp
debug/: common.hpp  rpc.hpp  stderr.hpp  stdout.hpp
python/: MANIFEST.in  README.md  TkConsole  async_subprocess.py  background.py  channel.py  gui.py  hexdump.py  log.py  pyproject.toml  repl.py  rpc.py  tcp.py  tk.py  tk_console.py  tk_table.py  transport.py  wrap_subprocess.py
python/binutils_mapfile/: __main__.py  diff.py  parser.py  svg.css  svg.py  utils.py  yaml.py
python/binutils_mapfile/templates/: squaremap.js.jinja  squaremap.svg.jinja
python/comms_ccf/: __main__.py  background.py  channel.py  hexdump.py  log.py  repl.py  rpc.py  rtt.py  serial.py  stdio.py  tcp.py  tk.py  tk_console.py  transport.py  types.py  wrap_subprocess.py
python/comms_ccf/tk/: con.py  console.py  gui.py  makefile  table.py
python/gnu/: mapfile.py
recording/: .envrc  comms-ccf-demo.asciicast  demo.md  simplify-paths  starship.toml  tkl
test/: cbor.cpp  circular_buffer.cpp  cobs.cpp  cobs_test.py  cobs_wrapper.cpp  cobs_wrapper.hpp  colorize_junit.py  conftest.py  fnv1a_test.py  fnv1a_wrapper.cpp  fnv1a_wrapper.hpp  hash_comparison.py  hexdump.hpp  iter.cpp  log.cpp  log.expected  rpc.cpp  rpc.interactive  test_utils.hpp
